<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ImageButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/counterButtonOld"-->
        <!--android:background="@drawable/roundcorner"-->
        <!--android:src="@mipmap/ic_launcher"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:visibility="gone"/>-->

    <at.markushi.ui.CircleButton
        android:id="@+id/counterButton"
        android:layout_width="128dip"
        android:layout_height="128dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_action_tick"
        app:cb_color="#FFBB33" />

    <Button
        android:id="@+id/btnNumNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:background="@drawable/circle_text_selector"
        android:clickable="false"
        android:text="1"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/arabic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="63dp"
        android:contentDescription="Hello!"
        android:text="arabic text here"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>
