...
                android:text="New Text" />

        </LinearLayout>
        <!--android:background="@drawable/listview_item_shadow" -->

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/header"
            android:layout_alignRight="@+id/header"
            android:layout_below="@+id/header"
            android:layout_marginRight="2dp"
...
